# postgres-arborfoods

./: .gitignore  LICENSE  README.md  pyproject.toml
binder/: arborfoods.db  binder-demo.ipynb  postBuild  requirements.txt  setup_sqlite.py
binder/data/: categories.csv  employees.csv  order_details.csv
data/: arborfoods_dump.sql  arborfoods_dump.tar
docker/: docker-compose.yml  postgres.env.example
notebook/: postgresql-arborfoods.ipynb
scripts/: export_postgres_tables.py
